--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /Lab01_Solution/ConsoleIO_01/bin/Debug
 /Lab01_Solution/ConsoleIO_01/obj/Debug
 /Lab01_Solution/UnitTestsDemo_02/obj/Debug
+/Lab01_Solution/Debuggable/bin/Debug
+/Lab01_Solution/Debuggable/obj/Debug
+/Lab01_Solution/.vs/Lab01_Solution/v14/.suo
